@@ -34,9 +34,8 @@ test_static_SOURCES = test_static.c
 
 CLEANFILES = test.txt test.dat
 
-noinst_HEADERS = matrix_source.c init_source.c file_source.c rowcol_source.c \
-	swap_source.c copy_source.c test_complex_source.c test_source.c
+noinst_HEADERS = matrix_source.c init_source.c file_source.c rowcol_source.c swap_source.c copy_source.c test_complex_source.c test_source.c minmax_source.c
 
-libgslmatrix_la_SOURCES = init.c matrix.c file.c rowcol.c swap.c copy.c
+libgslmatrix_la_SOURCES = init.c matrix.c file.c rowcol.c swap.c copy.c minmax.c
 
 
