@@ -82,6 +82,12 @@ gsl_vector_uint gsl_matrix_uint_row (gsl_matrix_uint * m, size_t i);
 gsl_vector_uint gsl_matrix_uint_column (gsl_matrix_uint * m, size_t j);
 gsl_vector_uint gsl_matrix_uint_diagonal (gsl_matrix_uint * m);
 
+unsigned int gsl_matrix_uint_max (const gsl_matrix_uint * m);
+unsigned int gsl_matrix_uint_min (const gsl_matrix_uint * m);
+void gsl_matrix_uint_minmax (const gsl_matrix_uint * m,
+                              unsigned int * min_out, size_t * imin, size_t * jmin,
+                              unsigned int * max_out, size_t * imax, size_t * jmax);
+
 /***********************************************************************/
 /* The functions below are obsolete                                    */
 /***********************************************************************/
@@ -94,6 +100,8 @@ int gsl_vector_uint_view_row_from_matrix (gsl_vector_uint * v, gsl_matrix_uint *
 int gsl_vector_uint_view_col_from_matrix (gsl_vector_uint * v, gsl_matrix_uint * m, const size_t j);
 
 int gsl_matrix_uint_view_from_vector (gsl_matrix_uint * m, gsl_vector_uint * base, const size_t offset, const size_t n1, const size_t n2, const size_t d2);
+
+
 
 extern int gsl_check_range ;
 
